updating css hero section and header nav to resolve spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .header h1 {
-    display: inline-flex;
+    display: inline-block;
     font-size: 48x;
 }
 
@@ -25,7 +25,6 @@ body {
 }
 
 .header nav {
-    display: inline-flex;
     padding-top: 15px;
     padding-bottom: 15px;
     margin-right: 20px;
